[package]
name = "nmea-parser"
version = "0.12.0-dev"
publish = false
description = "NMEA 0183 parser for AIS and GNSS sentences"
authors = ["Timo Saarinen <zaari@mailbox.org>"]
license = "Apache-2.0"
repository = "https://github.com/zaari/nmea-parser"
documentation = "https://docs.rs/nmea-parser"
keywords = ["nmea", "ais", "gnss", "gps", "no_std"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.17", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
log = "0.4.20"
hashbrown = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
anyhow = "1.0"
# Async runtime (required for S3 and Parquet operations)
tokio = { version = "1.0", features = ["full"] }
# Parquet and Arrow dependencies
arrow = "53.0"
parquet = "53.4"
datafusion = "42.0"
# S3 and AWS dependencies  
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-credential-types = "1.0"
aws-types = "1.0"
# UUID for unique identifiers
uuid = { version = "1.6", features = ["v7"] }
# Async utilities
futures = "0.3"
# Apache Iceberg dependencies
iceberg = "0.3"
iceberg-catalog-rest = "0.3"
# iceberg-catalog-hms = "0.3"  # Commented out due to compilation issues
object_store = "0.11"
url = "2.5"

[dev-dependencies]
assert = "0.7.4"

# CLI binary for processing NMEA files
[[bin]]
name = "nmea-cli"
path = "src/bin/nmea-cli.rs"

[profile.release]
# Enable Link Time Optimization for better inlining across crates
lto = "fat"
# Single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Strip symbols to reduce binary size
strip = true
# Optimize for speed
opt-level = 3
# Panic strategy for smaller binaries
panic = "abort"

[profile.bench]
# Inherit from release but keep debug info for profiling
inherits = "release"
strip = false
debug = true
